[package]
name = "entrypoint-upstream"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
pinocchio = { version = "0.10.1", default-features = false } 
solana-define-syscall = { version = "4.0.1", features = [
    "unstable-static-syscalls",
], optional = true }

[dev-dependencies]
mollusk-svm = "0.10.0"
solana-instruction = "3.1.0"
solana-pubkey = "2.2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true